# tapioca

./: .gitignore  LICENSE  README.md  environment.yml  mandyoc_class_tests.ipynb  mkdocs.yml  pyproject.toml
docs/: index.md
docs/references/: auxiliaries.md
docs/source/: conf.py  index.md
docs/source/abstractions/: index.md
docs/source/references/: auxiliaries.md  index.md  inputs.md  postproc.md
docs/source/user_guide/: index.md  install.md  quick_postproc.md
docs/user_guide/: install.md  quick.md
mk_docs/abstractions/: mandyocScen.md
mk_docs/references/: postproc.md
src/postrunning/: 0_organize_outputs.sh  LithoNETCDF_v2.jl  README.md  convertNETCDF_v2.jl  install_packages.jl  meshes2netcdf.jl  meshs2netcdf.jl
src/tapioca/: __init__.py  _aux_functions.py  _variables.py  mandyocPlotter.py  post_processing.py  scenClasses.py
tests/: initial_example.ipynb  mandyoc_class_tests.ipynb
tests/example-continental_rift/: bc_velocity_-1.txt  bc_velocity_0.txt  density.nc  dimensional_convertion.txt  heat.nc  input_temperature_0.txt  input_velocity_0.txt  interfaces.txt  lithology.nc  param.txt  particles_trajectories.nc  pressure.nc  strain.nc  strain_rate.nc  surface.nc  temperature.nc  thermal_diffusivity.nc  times.csv  velocity.nc  viscosity.nc
tests/example-continental_rift/density/: density_0.txt  density_10.txt  density_100.txt  density_110.txt  density_120.txt  density_130.txt  density_140.txt  density_150.txt  density_160.txt  density_170.txt  density_180.txt  density_190.txt  density_20.txt  density_200.txt  density_210.txt  density_220.txt  (+25 more)
(+1686 files in other folders)
